# embedded-audio-tools

./: Cargo.toml  README.md
benches/: interpolation.rs
examples/: ar.rs  compressor.rs
src/: all_pass.rs  clipping.rs  comb.rs  decibels.rs  delay_line.rs  envelope.rs  lib.rs  lookup_tables.rs  oscillator.rs  phase_accumulator.rs  stereo.rs  wavetable.rs
src/biquad/: butterworth.rs  mod.rs
src/dynamics/: ff_comp.rs  mod.rs
src/envelope/: adsr.rs  ar.rs  mod.rs  multi_stage.rs
src/fixed_point/: math.rs
src/float/: bit_manipulation.rs  conversion.rs  dsp_util.rs  integral.rs  interpolation.rs  math.rs  mod.rs
src/memory/: mem_slice.rs  memory_slice.rs  mod.rs  mut_mem_slice.rs
src/oscillator/: mod.rs  osc_functional.rs  osc_wavetable.rs  phase_accumulator.rs
src/oscillator/lookup_tables/: bl_rect.rs  mod.rs
