[package]
name = "embedded-audio-tools"
version = "0.1.0"
edition = "2021"
authors = ["backtail <mail@maxgenson.de>"]

[dependencies]
micromath = "2.0.0"
tock-registers = "0.8.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
textplots = "0.8.6"
hound = "3.5.1"
rgb = "0.8.27"

[[bench]]
name = "interpolation"
harness = false

[features]
no_std = []
